k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-ecommerce
  labels:
    app: mern-ecommerce
    tier: application
