k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern-ecommerce
  labels:
    app: backend
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
      - name: backend
        image: filiplozanoski/mern-ecommerce-backend:cors-fix
        ports:
        - containerPort: 8000
          name: backend-port
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 5
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 1
        #   periodSeconds: 5
        imagePullPolicy: Always
