k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-ecommerce
  labels:
    app: backend
    tier: backend
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: backend-port
  selector:
    app: backend
  type: ClusterIP
